# drf-app

./: .gitignore  pyproject.toml
blog/: admin.py  models.py  urls.py
blog/migrations/: 0001_initial.py
blog_api/: apps.py  serializers.py  urls.py
core/: settings.py  urls.py
